5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1865_1540.log
== TEST (2019-07-04 10:32:37) 
-- CODE:
from math import*

x = array(eval(input("digite: ")))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a=<n:
	r = 1 - (x**e/factorail(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(r)


-- ERROR:
File "XXXX", line 11
    while a=<n:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:52) 
-- CODE:
from math import*

x = array(eval(input("digite: ")))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorail(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(r)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:18) 
-- CODE:
from math import*

x = array(eval(input("digite: ")))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorail(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(r)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:48) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorail(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(r)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = 1 - (x**e/factorail(d))
NameError: name 'factorail' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:35:19) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorial(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(r)


-- OUTPUT:
0.9999425462328225
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:36:07) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorial(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(r**0.5)


-- OUTPUT:
0.9999712727037825
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:11) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorial(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5),6)


-- OUTPUT:
1 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:31) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorial(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5, 6))


-- OUTPUT:
0.999971
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:37:50) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorial(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5, 6))


-- EXECUTION TIME:
0.759507
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.999971
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
0.977698
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:46) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/d).factorial()
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5, 6))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = 1 - (x**e/d).factorial()
AttributeError: 'float' object has no attribute 'factorial'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:39:52) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = (x**e/factorial(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- OUTPUT:
0.00758
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:11) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorial(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- OUTPUT:
0.999971
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:24) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorial(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- OUTPUT:
0.999971
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:41:42) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorial(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- EXECUTION TIME:
0.625661
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.999971
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
0.977698
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:20) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - factorial((x**e/factoriald))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = 1 - factorial((x**e/factoriald))
NameError: name 'factoriald' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:48) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - factorial((x**e/d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = 1 - factorial((x**e/d))
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:09) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - factorial(((x**e/d)))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = 1 - factorial(((x**e/d)))
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:42) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r =  factorial(x**e/d)
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r =  factorial(x**e/d)
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:47) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 -((x**e/factorial(d))
	r = r * i
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
File "XXXX", line 13
    r = r * i
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:13) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 -((x**e/factorial(d))*i
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
File "XXXX", line 13
    e = e +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:40) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 -((x**e/factorial(d))*i
	e = e + 1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
File "XXXX", line 13
    e = e + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:46:03) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 -((x**e/factorial(d))*i
	e = e + 1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
File "XXXX", line 13
    e = e + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:46:14) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 -((x**e/factorial(d))*i
			  
	e = e + 1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
File "XXXX", line 14
    e = e + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:02) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 -((x**e/factorial(d))*i
	r = r	* 1	  
	e = e + 1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
File "XXXX", line 13
    r = r	* 1	  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:35) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 -((x**e/factorial(d)) * i	  
	e = e + 1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
File "XXXX", line 13
    e = e + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:28) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorial(d))
	r = r * 1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- OUTPUT:
0.999971
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:44) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorial(d))
	r = r * i
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(r**0.5,6))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:12) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r = 1 - (x**e/factorial(d))
	r = r * i
	e = e +1
	d = d + 2
	a = a + 1
print(round(r,6))


-- OUTPUT:
-0.999943
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:50:24) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r =  r + 1 - (x**e/factorial(d)) * i
	e = e +1
	d = d + 2
	a = a + 1
print(round(r,6))


-- OUTPUT:
4.682933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:50:42) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r =  r + 1 - (x**e/factorial(d)) * i
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- OUTPUT:
2.164009
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:51:20) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r =   1 - (x**e/factorial(d)) * i
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- OUTPUT:
1.000029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:52:24) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r =   1 - (x**e/factorial(d)) * i
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- OUTPUT:
1.000029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:17) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r =  (x**e/factorial(d)) * i-1
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(round(r**0.5,6))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:44) 
-- CODE:
from math import*

x = eval(input("digite: "))
n = int(input("termos: "))

e = 1
d = 2
i = -1
a = 0
r = 0
while a <= n:
	r =  (x**e/factorial(d))-1 * i
	e = e +1
	d = d + 2
	a = a + 1
print(round(r**0.5,6))


-- OUTPUT:
1.000029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
